welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: method fonctionTest has return statement; needs result type
  return (estFaceMur() & bool)
  ^SnakeBuggle:23: error: value droite is not a member of Unit
       droite();avance()droite()
                        ^